opam-version: "2.0"
name: "lwt_socks4_unix"
version: "0.0.1"
synopsis: "One-line description"
description: ""
maintainer: "Name <email>"
authors: "Name <email>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [
  "socks"
  "lwt"
  "dune"
  "ipaddr"
]
build: [ "dune" "build" "-p" name "-j" jobs ]
