opam-version: "2.0"
name: "mirage_socks4"
version: "0.0.1"
synopsis: "One-line description"
description: ""
maintainer: "Name <email>"
authors: "Name <email>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [
  "socks"
  "lwt"
  "dune"
  "ipaddr"
  "mirage-flow"
]
build: [ "dune" "build" "-p" name "-j" jobs ]
