opam-version: "2.0"
name: "http_request"
version: "0.0.1"
synopsis: "One-line description"
description: ""
maintainer: "Name <email>"
authors: "Name <email>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [
  "lwt_socks4_unix"
  "ca-certs"
  "tls"
]
build: [ "dune" "build" "-p" name "-j" jobs ]
